added better color pallette and use it in app

--- a/src/components/ErrorState/ErrorState.scss
+++ b/src/components/ErrorState/ErrorState.scss
@@ -5,11 +5,12 @@
 
   h1 {
     text-align: center;
+    color: var(--color-error);
   }
 
   svg {
     path {
-      fill: #333;
+      fill: var(--color-error);
     }
   }
 }
