--- a/src/components/CocktailLoadingSpinner/CocktailLoadingSpinner.scss
+++ b/src/components/CocktailLoadingSpinner/CocktailLoadingSpinner.scss
@@ -4,11 +4,22 @@
   --x-translation: 1em;
   --rotation: 20deg;
 
-  path {
-    fill: white;
-  }
+  width: 100%;
+  height: 100%;
 
-  animation: jumping-drink 3s ease-in-out infinite;
+  display: grid;
+  place-items: center;
+
+  svg {
+    --size: 7em;
+    width: var(--size);
+    height: var(--size);
+
+    animation: jumping-drink 3s ease-in-out infinite;
+    path {
+      fill: var(--color-accent);
+    }
+  }
 
   @keyframes jumping-drink {
     0% {
