--- a/src/pages/CocktailRecipe/CocktailRecipe.scss
+++ b/src/pages/CocktailRecipe/CocktailRecipe.scss
@@ -7,7 +7,7 @@
     overflow-y: scroll;
 
     section {
-      background-color: lightblue;
+      background-color: var(--color-bg-light);
       padding: 1rem;
       margin-bottom: 1rem;
 
