--- a/src/pages/HomePage/components/VirtualCocktailsList/VirtualCocktailsList.scss
+++ b/src/pages/HomePage/components/VirtualCocktailsList/VirtualCocktailsList.scss
@@ -1,16 +1,5 @@
+@use "../../../../common/mixins.scss" as *;
+
 .virtual-cocktails-list {
-  border: 3px solid blue;
-
-  
-  .cocktail-item {
-    border: 1px solid green;
-    
-    &__title {
-      border: 2px solid deeppink;
-    }
-
-    &--empty {
-      background-color: #222;
-    }
-  }
+  @include flex($justify: flex-start);
 }
