--- a/src/pages/HomePage/components/VirtualCocktailsList/CocktailItem/CocktailItem.scss
+++ b/src/pages/HomePage/components/VirtualCocktailsList/CocktailItem/CocktailItem.scss
@@ -1,14 +1,34 @@
+@use "../../../../../common/mixins.scss" as *;
+
 .cocktail-item {
-  border: 3px solid green;
+  --container-pad: 0.5em;
+  --radius: 0.7em;
+
+  padding: var(--container-pad);
+  position: relative;
+  @include flex($align: stretch);
 
   &__name {
-    border: 1px solid red;
+    --name-inner-pad: 0.2em;
+    --name-outer-pad: calc(var(--container-pad) + var(--name-inner-pad));
+
+    text-align: center;
+
+    border: 1px solid var(--color-primary);
+    background-color: var(--color-bg-light);
+    border-radius: var(--radius);
+    padding: var(--name-inner-pad);
+
+    position: absolute;
+    inset: auto var(--name-outer-pad) var(--name-outer-pad)
+      var(--name-outer-pad);
   }
 
   &__thumbnail {
-    border: 1px solid blue;
-
     width: 100%;
     height: 100%;
+    border-radius: var(--radius);
+
+    box-shadow: 0px 5px 10px 0 rgba(0, 0, 0, 0.5);
   }
 }
