--- a/src/pages/CocktailRecipe/CocktailRecipe.scss
+++ b/src/pages/CocktailRecipe/CocktailRecipe.scss
@@ -1,7 +1,12 @@
 @use "../../common/mixins.scss" as *;
 
 .cocktail-recipe {
-  @include flex($align: flex-start, $justify: flex-start, $gap: 1em);
+
+  header {
+    @include flex($direction: row, $justify: space-between);
+  }
+
+  @include flex($align: stretch, $justify: flex-start, $gap: 1em);
 
   &__instructions {
     overflow-y: scroll;
