--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -1,19 +1,35 @@
 @use "../../common/mixins.scss" as *;
 
-.input {
+.common-input-styles {
+  --padding: 0.5em 1em;
+
   border-radius: 0.5em;
   border: 1px solid var(--color-primary);
   width: 100%;
   background-color: var(--color-bg-light);
   color: var(--color-primary);
   overflow: hidden;
+}
 
+.input {
+  @extend .common-input-styles;
   @include flex($direction: row, $align: center, $justify: stretch);
 
   &__input-field {
     flex: 10;
     font-size: 1.5em;
-    padding: 0.5em 1em;
+    padding: var(--padding);
+
+    &--has-error {
+      &::placeholder {
+        color: var(--color-error);
+      }
+    }
+  }
+
+  &--has-error {
+    border-color: var(--color-error);
+    border-width: 2px;
   }
 
   &__icon {
@@ -32,4 +48,10 @@
       }
     }
   }
+}
+
+.textarea {
+  @extend .common-input-styles;
+  padding: var(--padding);
+  height: 10em;
 }
