--- a/src/pages/AddRecipe/AddRecipe.scss
+++ b/src/pages/AddRecipe/AddRecipe.scss
@@ -1,10 +1,17 @@
 @use "../../common/mixins.scss" as *;
 
 .add-recipe {
+  header {
+    @include flex(
+      $direction: row,
+      $justify: space-between,
+      $align: center
+    );
+  }
+
   @include flex($justify: flex-start, $align: stretch, $gap: 1em);
 
   form {
-    border: 2px solid lime;
     flex: 1;
     @include flex($justify: flex-start, $align: stretch, $gap: 1em);
 
