added some desktop/mobile specific styles

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -12,7 +12,7 @@
   font-weight: 700;
   padding: 0.5em 1em;
 
-  @include flex($direction: row, $justify: center, $gap: 1em);
+  @include flex($direction: row, $justify: center);
 
   svg {
     width: var(--content-size);
