--- a/src/common/mixins.scss
+++ b/src/common/mixins.scss
@@ -1,4 +1,4 @@
-@mixin flex($align: center, $justify: center, $direction: column, $gap: 0) {
+@mixin flex($align: center, $justify: center, $direction: column, $gap: var(--gap)) {
   & {
     display: flex;
     flex-direction: $direction;
