--- a/src/pages/AddRecipe/components/UploadImage/UploadImage.scss
+++ b/src/pages/AddRecipe/components/UploadImage/UploadImage.scss
@@ -1,6 +1,4 @@
 .upload-image {
-  width: 100%;
-  max-width: 300px;
   margin: 0 auto;
 
   &__input {
@@ -11,7 +9,7 @@
     display: grid;
     place-items: center;
     width: 100%;
-    height: 200px;
+    height: 100%;
     border: 10px dashed var(--color-secondary);
     border-radius: 8px;
     cursor: pointer;
