--- a/src/pages/CommonPageLayout/CommonPageLayout.scss
+++ b/src/pages/CommonPageLayout/CommonPageLayout.scss
@@ -4,10 +4,15 @@
   width: 100%;
   height: 100%;
 
+  --gap: 3rem;
+  &--on-mobile {
+    --gap: 1rem;
+  }
+
   & > div {
     width: 100%;
     height: 100%;
 
-    padding: 1rem;
+    padding: var(--gap);
   }
 }
